--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ Django==5.2.8
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
 drf-yasg==1.21.11
+gunicorn==23.0.0
 inflection==0.5.1
 packaging==25.0
 psycopg2-binary==2.9.11
+pyngrok==7.4.1
 python-decouple==3.8
 pytz==2025.2
 PyYAML==6.0.3
